fix dark mode for more info

--- a/style.css
+++ b/style.css
@@ -231,25 +231,14 @@ nav {
     z-index: 2;
     width: 100%;
     height: 80%;
-    background-color: rgba(0, 0, 0, 0.473);
+    background-color: #fffefe8f;
     -webkit-animation: fadeIn 1.2 ease-in-out;
     animation: fadeIn 1.2 ease-in-out;
     border-radius: 1.5rem;
     top: 43px;
     left: 50px;
     justify-content: center;
-}
-
-.sidenav-container {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    z-index: 3;
-    background-color: rgba(17, 17, 17, 0.473);
-    transition: 0.5s;
-    align-items: center;
-    border-radius: 1.5rem;
-    margin: 0;
+    margin: 1em;
 }
 
 .backdrop-container a {
@@ -265,15 +254,16 @@ nav {
 }
 
 .backdrop-container .closebtn {
-    color: white;
+    color: black;
     padding-right: 1rem;
 }
 
-.sidenav-container .drawe-close-button {
+.drawer-close-button {
     height: 3rem;
     width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     margin-bottom: 3rem;
+    color: black;
 }
