--- a/theme.css
+++ b/theme.css
@@ -42,3 +42,12 @@
 .loading.loading-dark::after {
     color: white;
 }
+
+.backdrop-container.backdrop-container-dark {
+    background-color: #1616168f;
+    color: white;
+}
+
+.closebtn.closebtn-dark {
+    color: white;
+}
